Refactoring #41